--- a/app/assets/stylesheets/dealhunter.css
+++ b/app/assets/stylesheets/dealhunter.css
@@ -112,8 +112,24 @@ aside h3 {
     padding: 10px;
     margin: 0 0 10px 0;
 }
+#main-content aside h2 {
+    background-color: rgb(23, 46, 117);
+    color: #FFF;
+    font-size: 11px;
+    font-weight: 700;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+    padding: 10px;
+    margin: 0 0 10px 0;
+}
 
 #page-micuenta {
+    background: url(/assets/bgTexture.png);
+
+}
+
+
+#main-content {
     background: url(/assets/bgTexture.png);
 
 }
