--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -30,7 +30,10 @@
             <li><a href="#mapas" data-toggle="tab">Mapa</a></li>
             <% if @user.company? %>
               <li><a href="#clients" data-toggle="tab">Inscriptos</a></li>
-            <% end%>
+              <li><a href="#results" data-toggle="tab">Resultados</a></li>
+
+          <% end%>
+
           </ul>
 
           <div class="tab-content">
@@ -81,7 +84,16 @@
                   <%end%>
               </ul>
 
+
             </div>
+
+            <div class="tab-pane" id="results">
+              <ul>
+                <%= link_to 'Editar resultados', offers_results_path(:id => @offer.id) %>
+              </ul>
+
+            </div>
+
 
           </div>
         </article><!--end tabs-wrapper-->
