view and controller edit offer

--- a/app/views/users/offers_company_user.html.erb
+++ b/app/views/users/offers_company_user.html.erb
@@ -67,6 +67,7 @@
                                               :confirm => 'Está seguro?', :method => :delete %>
 
                               <%= button_to 'Ver Detalles', offer_path(offer), :method => :put%></td>
+                              <%= link_to 'Editar', edit_offer_path(offer)%>
                             </div>
                           </div>
                           <!--end media-body-->
