div id bug (page-micuenta) fixed
no sé para que estaba, lo saqué, espero que no se haya roto nada, probé
varias cosas, pero por las dudas, miren =S

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,11 +77,8 @@
 
 <% if user_signed_in? %>
 
-    <% if session[:body].nil? %>
-        <body id="landing">
-    <% else %>
-        <body id="<%= session[:body] %>">
-    <% end %>
+
+        <body id="page-micuenta">
 
     <!--header-->
     <header id="top" class="light-shadowed">
