--- a/app/views/users/change_newsletter_frequency.html.erb
+++ b/app/views/users/change_newsletter_frequency.html.erb
@@ -4,7 +4,7 @@
 
 
       <header class="out rounded-borders-top">
-        <h2>Suscripcción al Newsletter</h2>
+        <h2>Suscripción al Newsletter</h2>
 
       </header>
 
@@ -20,7 +20,7 @@
 
                       <div class="control-group clearfix">
                         <h3>Elegí a continuación,</h3>
-                        <h5>Con que frecuencia semanal querés recibir la info de las nuevas ofertas?</h5>
+                        <h5>¿Con qué frecuencia semanal querés recibir la info de las nuevas ofertas?</h5>
                         <ul>
 
                           <%= h.input :newsletter_frequency, :as => :radio, :label => false %>
@@ -59,11 +59,6 @@
     <!--end main content-->
 
 
-
-
-
-
-
     <!--sidebar-->
     <aside class="span4" style="background: none;">
 
@@ -87,11 +82,7 @@
           <li><a href="<%= users_newsletter_freq_path %>" class="active">Frecuencia del newsletter</a></li>        </ul>
         </ul>
       </div>
-      <!--<div id="bags">-->
-      <!--<div id="stage">-->
-      <!--<div id="block"></div>-->
-      <!--</div>-->
-      <!--</div>-->
+
     </aside><!--end sidebar-->
   </div><!--end container-->
 </div><!--end row-->
