--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -93,6 +93,10 @@
 
 <script type="text/javascript">
     startFaye(<%=current_user.id%>);
-
 </script>
+<style>
+  #footer-wrapper{
+      margin-top: 1% !important;
+  }
+</style>
 
