offer results view & link in end offer mail

--- a/app/views/offer_end_mailer/offer_end_email.html.erb
+++ b/app/views/offer_end_mailer/offer_end_email.html.erb
@@ -184,7 +184,7 @@
                       border-radius: 5px;">
                 <tr>
                   <td align="center" >
-                    <a href="http://localhost:3000" class=" rounded-borders-btn firstA" style="color: white;
+                    <a href="http://localhost:3000/offers/<%=@offer.id %>" class=" rounded-borders-btn firstA" style="color: white;
                             font-size: 12px;
                             text-decoration: none;
                             text-align: center;">VER RESULTADOS</a></td>
