--- a/app/views/offer_end_mailer/offer_end_email.html.erb
+++ b/app/views/offer_end_mailer/offer_end_email.html.erb
@@ -157,7 +157,7 @@
           <table width="100%" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td style="font-size: 14px; line-height:20px; color:#333;">
-                <p>¡Hola, <%= @user.user.email %>!</p>
+                <p>¡Hola, <%= @user.email %>!</p>
 
                 <p>Tu oferta <%= @offer.name %> acaba de finalizar. </p>
 
