--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -15,12 +15,12 @@
 
            <% if @user.company?%>
                <!-- aca van las estadísiticas de la empresa-->
-                <%= render 'offers/statistics' %>
+                <%= render 'users/statistics' %>
 
            <%else%>
 
                 <!-- aca van las estadísiticas del cliente-->
-                <%= render 'offers/statistics' %>
+                <%= render 'users/statistics' %>
 
            <%end%>
 
