Change statistics menu depending on type of user

--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -41,8 +41,14 @@
 
         <h2 class="rounded-borders-btn">Detalle de Cuenta</h2>
         <ul class="aside-nav">
-          <li><a href="<%= users_offers_client_user_path %>" class="active">Mis Ofertas</a></li>
-          <li><a href="<%= users_titles_user_path %>">Mis Intereses</a></li>
+          <% if !current_user.company? %>
+              <li><a href="<%= users_offers_client_user_path %>" class="active">Mis Ofertas</a></li>
+              <li><a href="<%= users_titles_user_path %>">Mis Intereses</a></li>
+          <%else%>
+              <li><a href="<%= users_offers_company_user_path %>" class="active">Mis Ofertas</a></li>
+              <li><a href="<%= users_branches_company_user_path %>">Mis Sucursales</a></li>
+          <%end%>
+
         </ul>
         <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
