Titles pie chart logic

--- a/app/views/users/_statistics.html.erb
+++ b/app/views/users/_statistics.html.erb
@@ -27,19 +27,33 @@
 </body>
 </html>
 <script>
+    <% titles = Hash.new %>
+    <% Title.all.each do |t| %>
+        <% titles[t.name] = 0 %>
+    <% end %>
+    <% co = ClientsOffer.find_all_by_client_id(@user.client.id) %>
+    <% co.each do |c| %>
+        <% offer_id = c.offer_id %>
+        <% ot = OffersTitles.find_all_by_offer_id(offer_id) %>
+        <% ot.each do |o| %>
+            <% title = Title.find(o.title_id) %>
+            <% titles[title.name] = titles[title.name] + 1 %>
+        <% end %>
+    <% end %>
+
     new Morris.Donut({
         // ID of the element in which to draw the chart.
         element: 'myfirstchart',
         // Chart data records -- each entry in this array corresponds to a point on
         // the chart.
-        <% @oferta=Offer.new%>
-        <% @oferta.name="Oferta1"%>
 
         data: [
 
-
-            {label: "<%=@oferta.name%>", value: 50},{label: "Oferta2", value: 50}
-
+            <% Title.all.each do |t| %>
+                <% unless titles[t.name] == 0 %>
+                    {label: "<%=t.name%>", value: <%=titles[t.name] %>},
+                <% end %>
+            <% end %>
 
         ],
 
@@ -48,6 +62,8 @@
             '#0BA462'
 
         ]
+
+
 
     });
 </script>
