--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -23,7 +23,7 @@
            <%else%>
 
                 <!-- aca van las estadísiticas del cliente-->
-                <%= render 'users/statistics' %>
+                <%= render 'users/statistics_client' %>
 
            <%end%>
 
