--- a/app/views/users/_statistics.html.erb
+++ b/app/views/users/_statistics.html.erb
@@ -32,13 +32,13 @@
         element: 'myfirstchart',
         // Chart data records -- each entry in this array corresponds to a point on
         // the chart.
-        <% @oferta=Offer.new%>
-        <% @oferta.name="Oferta1"%>
+
+
 
         data: [
 
 
-            {label: "<%=@oferta.name%>", value: 50},{label: "Oferta2", value: 50}
+            {label: "Oferta1", value: 50},{label: "Oferta2", value: 50}
 
 
         ],
