--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -19,7 +19,7 @@
 
                 </div>
                <!-- aca van las estadísiticas de la empresa-->
-                <%= render 'users/statistics' %>
+                <%= render 'users/statistics_company' %>
            <%else%>
                <div> Total de dinero ahorrado hasta el momento: $<%=@user.client.saved_money %>
                </div>
