--- a/app/views/users/_statistics_company.html.erb
+++ b/app/views/users/_statistics_company.html.erb
@@ -27,8 +27,28 @@
   <div class="wrapper">
     <article>
 
-          <label class="pull-left">Cantidad de ofertas a las que te has inscripto por interés.</label>
+      <ul id="myTab" class="nav nav-tabs">
+        <li class="active"><a href="#offers" data-toggle="tab">Actividad</a></li>
+        <li><a href="#competition" data-toggle="tab">Competencia</a></li>
+      </ul>
+
+      <div id="myTabContent" class="tab-content">
+
+        <div class="tab-pane active clearfix" id="offers">
+
+          <label class="pull-left">Cantidad de ofertas de la empresa por mes de este año.</label>
           <div id="ofertasChart" style="height: 310px;"></div>
+
+        </div><!--end myTabContent-->
+
+        <div class="tab-pane active clearfix" id="competition">
+
+          <label class="pull-left">Cantidad de ofertas de las competencias por interés.</label>
+          <div id="compChart" style="height: 310px;"></div>
+
+        </div><!--end myTabContent-->
+
+      </div>
 
     </article>
 
@@ -39,22 +59,32 @@
 
 </body>
 </html>
-<script> //INTERESES
+<script>
 
-//ACTIVIDAD
+//OFERTAS
 new Morris.Bar({
     element: 'ofertasChart',
     data: [
         <% @offers.each do |a| %>
-        <% unless a[1] == 0 %>
-        <%  %>
-        { y: '<%= a[0] %>', a: <%= a[1] %>, b: <%= a[2] %> },
-        <% end %>
+            { y: '<%= a[0] %>', a: <%= a[1] %>, b: <%= a[2] %> },
         <% end %>
     ],
     xkey: 'y',
     ykeys: ['a', 'b'],
     labels: ['Ofertas', 'Finalizadas']
+});
+
+//COMPETENCIA
+new Morris.Bar({
+    element: 'compChart',
+    data: [
+        <% Title.all.each do |t| %>
+                { y: '<%= t.name %>', a: <%= @comp[t.name] %> },
+        <% end %>
+    ],
+    xkey: 'y',
+    ykeys: ['a'],
+    labels: ['Ofertas']
 });
 
 </script>
