--- a/app/views/users/statistics.html.erb
+++ b/app/views/users/statistics.html.erb
@@ -29,6 +29,7 @@
                 </div>
                 <!-- aca van las estadísiticas del cliente-->
                 <%= render 'users/statistics_client' %>
+                <%= render 'users/statistics_win' %>
 
            <%end%>
 
