--- a/app/views/users/_statistics_client.html.erb
+++ b/app/views/users/_statistics_client.html.erb
@@ -42,14 +42,14 @@
 
         </div><!--end myTabContent-->
 
-        <div class="tab-pane fade in active clearfix" id="activity">
+        <div class="tab-pane clearfix" id="activity">
 
           <label class="pull-left">Cantidad de ofertas a las que te has inscripto en el último año.</label>
           <div id="actividadChart" style="height: 310px;"></div>
 
         </div><!--end myTabContent-->
 
-        <div class="tab-pane fade in active clearfix" id="completadas">
+        <div class="tab-pane clearfix" id="completadas">
 
           <label class="pull-left">Cantidad de ofertas a las que te has inscripto en el último año.</label>
           <div id="winChart" style="height: 310px;"></div>
