--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,4 +1,5 @@
 <!--container-->
+
 <div class="container" id="main-content">
 <div class="row">
 <section class="span8 rounded-borders light-shadowed">
@@ -211,7 +212,22 @@
             <% end %>
             <br>
             <br>
-        <% end %>
+
+            <a href="https://twitter.com/share" class="twitter-share-button" data-related="dealhunter" data-text=" Estoy viendo la oferta: <%= @offer.name%>. En #Dealhunter, inscribite vos también en: <%= offer_url(@offer) %> " data-lang="es" data-size="large" data-count="none">Compartir en twitter</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
+            <div id="fb-root"></div>
+            <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=474334446020265";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+
+            <div class="fb-share-button" data-href="http://www.dealhunter.com.ar<%= offer_path(@offer) %>" data-type="button_count">Share</div>
+      <% end %>
 
 
 
