--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -76,16 +76,18 @@
 
         </div>
 
+        <!--
         <div class="tab-pane" id="mapas" align="center">
 
-          <%= gmaps("map_options" => {
-                  "zoom" => 13,
-                  "center_latitude" => @latitude,
-                  "center_longitude" => @longitude,
-                  "auto_adjust" => true,
+          %=  gmaps("map_options" => {
+               "zoom" => 13,
+                 "center_latitude" => @latitude,
+                 "center_longitude" => @longitude,
+                 "auto_adjust" => true,
           }, "markers" => {"data" => @json}) %>
 
         </div>
+        -->
 
 
         <div class="tab-pane" id="clients">
